// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`removeStaleDirectories does nothing if directory does not exist but removes root 1`] = `
[
  [
    "<PROJECT_ROOT>/dist",
  ],
]
`;

exports[`removeStaleDirectories removes full file tree 1`] = `
[
  [
    "<PROJECT_ROOT>/dist/static",
  ],
  [
    "<PROJECT_ROOT>/dist",
  ],
]
`;

exports[`removeStaleDirectories removes full file tree with multiple nested 1`] = `
[
  [
    "<PROJECT_ROOT>/dist/inside",
  ],
  [
    "<PROJECT_ROOT>/dist/static",
  ],
  [
    "<PROJECT_ROOT>/dist",
  ],
]
`;

exports[`removeStaleDirectories removes top next directory, but leaves sub managed directory 1`] = `
[
  [
    "<PROJECT_ROOT>/dist/static",
  ],
]
`;
